<resources>
    <string name="app_name">qrcs_device</string>
    <string name="qrdevice_client_app">QRdevice client app</string>
    <string name="command">command</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Sign in</string>
    <string name="in_developing">In developing.</string>
    <string name="wrong_login">"Wrong login or password."</string>
    <string name="input_type">Choose input type</string>
    <string name="serial_number">Serial number</string>
    <string name="apply">Apply</string>
    <string name="read_qr_code">Read QR code</string>
    <string name="decimal_number">Decimal number</string>
    <string name="device_name">Name</string>
    <string name="device_type">Type</string>
    <string name="date">Date</string>
    <string name="operation">Operation</string>
    <string name="worker">Worker</string>
    <string name="add">Add</string>
    <string name="device_not_exist">This device not exist.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="version">Version</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="settings">Settings</string>
    <string name="txt_cac">Check after compound</string>
    <string name="txt_chk">Check</string>
    <string name="txt_debug">Debug</string>
    <string name="txt_abc">Assembly before compound</string>
    <string name="txt_aac">Assembly after compound</string>
    <string name="txt_cal">Calibrate</string>
    <string name="device_not_exist_in_database">Device not exist in database</string>
    <string name="txt_cli">Climat</string>
    <string name="beep">Beep after QR-code readed</string>
</resources>